--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -1,21 +1,14 @@
-apiVersion: v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: magento2-mysql
   labels:
-    app: wordpress
+    app: magento2-mysql
 spec:
-  selector:
-    matchLabels:
-      app: magento2
-      tier: mysql
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
-        app: magento2
-        tier: mysql
+        app: magento2-mysql
     spec:
       containers:
       - image: mysql:latest
@@ -28,11 +21,3 @@ spec:
               key: password
         ports:
         - containerPort: 3306
-          name: mysql
-        volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
-      volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: mysql-pv-claim
