--- a/mysql-service.yaml
+++ b/mysql-service.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: magento2-mysql
-  labels:
-    app: magento2
 spec:
-  ports:
-    - port: 3306
   selector:
-    app: magento2
-    tier: mysql
-  clusterip: none
+  app: magento2-mysql
+  ports:
+  - name: mysql
+    protocol: TCP
+    port: 3306
+    targetPort: 3306
