--- a/magento-service.yaml
+++ b/magento-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-   name: magento2
-   labels:
-      app: magento2
+   name: apache
 spec:
-  ports:
-    - port: 80
   selector:
-    app: magento2
-    tier: frontend
-    type: loadbalancer
+    app: apache
+  ports:
+  - name: php
+    protocol: TCP
+    port: 80
+    targetPort: 80targetPort: 80
